# la-patate-chaude

./: Cargo.toml  README.md  docker-compose.yml
client/: Cargo.toml
client/src/: handler.rs  main.rs  target_strategy.rs
client/src/tcp/: mod.rs
common/src/: message.rs
common/src/challenge/: md5_hashcash.rs  monstrous_maze.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
